--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tiptap/extension-drag-handle": "^3.0.9",
@@ -44,6 +46,7 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "framer-motion": "^12.23.12",
+    "immer": "^10.1.1",
     "input-otp": "^1.4.2",
     "isomorphic-dompurify": "^2.26.0",
     "jsonwebtoken": "^9.0.2",
@@ -65,6 +68,7 @@
     "tailwind-merge": "^3.3.1",
     "tiptap-extension-resize-image": "^1.3.0",
     "use-debounce": "^10.0.5",
+    "uuid": "^11.1.0",
     "yup": "^1.6.1",
     "zod": "^4.0.16",
     "zustand": "^5.0.7"
