--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.23.12",
     "immer": "^10.1.1",
@@ -59,6 +60,7 @@
     "react-big-calendar": "^1.19.4",
     "react-countup": "^6.5.3",
     "react-datepicker": "^8.4.0",
+    "react-day-picker": "^9.9.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "19.1.0",
@@ -66,6 +68,7 @@
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.1.2",
     "tailwind-merge": "^3.3.1",
     "tiptap-extension-resize-image": "^1.3.0",
     "use-debounce": "^10.0.5",
