--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "19.1.0",
+    "react-easy-crop": "^5.5.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
@@ -69,6 +70,7 @@
     "tiptap-extension-resize-image": "^1.3.0",
     "use-debounce": "^10.0.5",
     "uuid": "^11.1.0",
+    "validator": "^13.15.15",
     "yup": "^1.6.1",
     "zod": "^4.0.16",
     "zustand": "^5.0.7"
@@ -84,6 +86,7 @@
     "@types/react-big-calendar": "^1.16.2",
     "@types/react-dom": "^19",
     "@types/react-rte": "^0.16.8",
+    "@types/validator": "^13.15.2",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "tailwindcss": "^4",
