--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "input-otp": "^1.4.2",
     "isomorphic-dompurify": "^2.26.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.535.0",
     "mongoose": "^8.17.0",
     "next": "15.4.5",
@@ -84,6 +85,7 @@
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
     "@types/bcrypt": "^6.0.0",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
