--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.2",
+    "sanitize-html": "^2.17.0",
     "tailwind-merge": "^3.3.1",
     "tiptap-extension-resize-image": "^1.3.0",
     "use-debounce": "^10.0.5",
@@ -92,6 +93,7 @@
     "@types/react-big-calendar": "^1.16.2",
     "@types/react-dom": "^19",
     "@types/react-rte": "^0.16.8",
+    "@types/sanitize-html": "^2.16.0",
     "@types/validator": "^13.15.2",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
