--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.23.12",
+    "fuse.js": "^7.1.0",
     "immer": "^10.1.1",
     "input-otp": "^1.4.2",
     "isomorphic-dompurify": "^2.26.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.535.0",
     "mongoose": "^8.17.0",
     "next": "15.4.5",
@@ -87,6 +89,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/bcrypt": "^6.0.0",
     "@types/lodash": "^4.17.20",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
