--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@types/validator": "^13.15.2",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "eslint-formatter-compact": "^9.0.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
