--- a/package.json
+++ b/package.json
@@ -63,17 +63,17 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.535.0",
     "mongoose": "^8.17.0",
-    "next": "15.4.5",
+    "next": "^16.0.10",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
-    "react": "19.1.0",
+    "react": "^19.2.3",
     "react-big-calendar": "^1.19.4",
     "react-countup": "^6.5.3",
     "react-datepicker": "^8.4.0",
     "react-day-picker": "^9.9.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.3",
     "react-easy-crop": "^5.5.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
