--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.11.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
@@ -18,7 +19,6 @@
     "@hookform/resolvers": "^5.2.1",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
-    "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -45,7 +45,7 @@
     "@tiptap/starter-kit": "^3.0.9",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
@@ -64,8 +64,8 @@
     "lucide-react": "^0.535.0",
     "mongoose": "^8.17.0",
     "next": "^16.0.10",
-    "next-auth": "^4.24.11",
-    "nodemailer": "^6.10.1",
+    "next-auth": "^5.0.0-beta.30",
+    "nodemailer": "^7.0.11",
     "react": "^19.2.3",
     "react-big-calendar": "^1.19.4",
     "react-countup": "^6.5.3",
